YI-133: header z-index issue

--- a/web/themes/custom/yale_infosec/components/03-organisms/site/site-header/_site-header.scss
+++ b/web/themes/custom/yale_infosec/components/03-organisms/site/site-header/_site-header.scss
@@ -4,7 +4,7 @@
   max-width: 992px;
   position: absolute;
   top: 0;
-  z-index: 1;
+  z-index: 100;
   width: 100%;
 
   &--fixed {
